--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ p
     padding: 0;
     margin: 0;
 }
-@media (max-width: 575px)
+@media (max-width: 767px)
 {
     body
     {
@@ -197,7 +197,7 @@ p
         background: #eee;
     }
 }
-@media(min-width:575px) and (max-width:1200px)
+@media(min-width:768px) and (max-width:1200px)
 {
     img
     {
@@ -232,5 +232,6 @@ p
     {
         margin: 10px;
         margin-bottom: 2px;
+        font-size: 1rem;
     }
 }
